--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ serenity = "0.12"
 dotenv = "*"
 tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
 diesel = { version = "2.2.0", features = ["sqlite"] }
+lazy-regex = "3.4.1"
